iac/week-7/demo-5/deployment-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment-registry
  labels:
    owner: my
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox
          #image: docker.io/busybox
          command:
            - sleep
            - "36000"
          imagePullPolicy: IfNotPresent
